# Wacret

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  test_parser.py  test_parser_debug.py
proto/: state.proto
src/: analysis.rs  cli.rs  compile.rs  create_table.rs  display.rs  main.rs
src/command/: create_table_v2.rs  display.rs  insert.rs  insert_nop.rs  mod.rs  view.rs
src/command/view/: mod.rs  utils.rs  view_protobuf.rs  view_v1.rs
src/compile/: compile.rs  compile_fast.rs  compile_standard.rs  mod.rs
src/core/: function.rs  function_v2.rs  mod.rs  module.rs  opcode.rs  stack_table.rs  val.rs
