[package]
name = "wacret"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
byteorder = "1.5.0"
camino = "1.1.9"
clap = { version = "4.5.20", features = ["derive"] }
cmp = "0.1.0"
csv = "1.3.1"
env_logger = "0.11.5"
indexmap = "2.9.0"
log = "0.4.22"
rmp-serde = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12"
strum = "0.26.3"
strum_macros = "0.26.4"
wasmparser = { git = "https://github.com/funera1/wasm-tools", branch = "feature/display-operator" }
wasm-encoder = { git = "https://github.com/funera1/wasm-tools", branch = "feature/display-operator" }

[build-dependencies]
prost-build = "0.12"
